--- a/src/css/AdminSideBar.module.css
+++ b/src/css/AdminSideBar.module.css
@@ -12,7 +12,6 @@
   flex-direction: column; /* 세로 정렬 */
 }
 
-
 /* 링크 섹션 컨테이너 */
 .sidebarSection {
   margin-bottom: 50px; /* 섹션 간 간격 */
@@ -39,6 +38,7 @@
   text-decoration: none; /* 밑줄 제거 */
   transition: background 0.3s, color 0.3s; /* 부드러운 색상 전환 */
 }
+
 /* 링크 호버 효과 */
 .hlink:hover {
   background-color: #495057; /* 호버 시 배경색 */
@@ -55,11 +55,13 @@
   margin-right: 10px; /* 아이콘과 텍스트 간격 */
   font-size: 1.2rem; /* 아이콘 크기 */
 }
+
 /* 부모 메뉴 (드롭다운) */
 .dropdown {
   position: relative; /* 부모 요소를 기준으로 하위 메뉴 위치 지정 */
   cursor: pointer;
 }
+
 /* 하위 메뉴 */
 .subMenu {
   display: none;
@@ -78,6 +80,7 @@
 .dropdown:hover .subMenu {
   display: flex; /* 마우스를 올리면 보이도록 설정 */
 }
+
 /* 드롭다운 활성화 시 아래 항목 밀어내기 */
 .dropdown:hover + .link {
   margin-top: 250px; /* 드롭다운 높이만큼 밀어냄 */
@@ -94,6 +97,6 @@
 
 /* 하위 메뉴 호버 효과 */
 .subLink:hover {
-  background-color: #007bff; /* 하위 메뉴 호버 배경색 */
+  background-color: #57948b; /* 하위 메뉴 호버 배경색 */
   color: white;
 }
