--- a/src/css/admin/SessionList.module.css
+++ b/src/css/admin/SessionList.module.css
@@ -16,8 +16,7 @@
     border-collapse: collapse;
     background-color: white; /* 테이블 배경 */
     border-radius: 8px; /* 테두리 둥글게 */
-    overflow: hidden; /* 내용 넘침 방지 */
-    white-space: nowrap; /* 줄바꿈 방지 */
+   
   }
   
   .sessionlisttable th,
@@ -27,6 +26,9 @@
     border-bottom: 1px solid #ddd; /* 셀 구분선 */
     font-size: 14px; /* 폰트 크기 */
     white-space: nowrap; /* 줄바꿈 방지 */
+    overflow: hidden; /* 내용 넘침 방지 */
+    white-space: nowrap; /* 줄바꿈 방지 */
+    text-overflow: ellipsis; /* 텍스트 말줄임 */
   }
   
   /* 테이블 헤더 스타일 */
@@ -38,9 +40,7 @@
   }
 
   .sessionlisttable td:nth-child(2) {
-
-    overflow: hidden; /* 넘치는 내용 숨김 */
-    text-overflow: ellipsis; /* 텍스트 말줄임 */
+    max-width: 200px;
   }
   .courselisttable th:nth-child(2), 
   .courselisttable td:nth-child(2) {
