--- a/src/css/admin/CourseList.module.css
+++ b/src/css/admin/CourseList.module.css
@@ -7,6 +7,7 @@
     padding: 20px;
     overflow: hidden; /* 내용 넘침 방지 */
     
+    
   }
   
   /* 테이블 스타일 */
@@ -26,14 +27,23 @@
     text-align: center; /* 가운데 정렬 */
     border-bottom: 1px solid #ddd; /* 셀 구분선 */
     font-size: 14px; /* 폰트 크기 */
-    
-  }
-  .courselisttable td:nth-child(2) {
-    text-align: left;
     overflow: hidden; /* 내용 넘침 방지 */
     white-space: nowrap; /* 줄바꿈 방지 */
     text-overflow: ellipsis; /* 텍스트 말줄임 */
   }
+
+  .courselisttable td:nth-child(2) { 
+    max-width: 200px;
+  }
+
+  .courselisttable td:nth-child(4) {
+    text-align: center;
+    overflow: hidden; /* 내용 넘침 방지 */
+    white-space: nowrap; /* 줄바꿈 방지 */
+    text-overflow: ellipsis; /* 텍스트 말줄임 */
+    max-width: 120px;
+  }
+  
   
   /* 테이블 헤더 스타일 */
   .courselisttable th {
@@ -74,6 +84,7 @@
     font-size: 14px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
+    text-decoration: none;
   }
 
   .editbtn:hover {
