--- a/src/css/manager/ManagerSideBar.module.css
+++ b/src/css/manager/ManagerSideBar.module.css
@@ -85,29 +85,29 @@
 /* 세 번째 드롭다운에만 적용 */
 .sidebarSection .dropdown:nth-child(3):hover + .link {
   margin-top: 250px; /* 원하는 높이로 조정 */
-  transition: margin ease, opacity ease;
+  transition: margin 0.3s ease, opacity 0.3s ease;
 }
 
 .sidebarSection .dropdown:nth-child(4):hover + .link {
   margin-top: 250px; /* 원하는 높이로 조정 */
-  transition: margin ease, opacity ease;
+  transition: margin 0.3s ease, opacity ease;
 }
 .sidebarSection .dropdown:nth-child(5):hover + .link {
   margin-top: 160px; /* 원하는 높이로 조정 */
-  transition: margin ease, opacity ease;
+  transition: margin 0.3s ease, opacity ease;
 }
 .sidebarSection .dropdown:nth-child(6):hover + .link {
   margin-top: 120px; /* 원하는 높이로 조정 */
-  transition: margin ease, opacity ease;
+  transition: margin 0.3s ease, opacity ease;
 }
 .sidebarSection .dropdown:nth-child(7):hover + .link {
   margin-top: 160px; /* 원하는 높이로 조정 */
-  transition: margin ease, opacity ease;
+  transition: margin 0.3s ease, opacity ease;
 }
 
 .sidebarSection .dropdown:nth-child(8):hover + .link {
   margin-top: 120px; /* 원하는 높이로 조정 */
-  transition: margin ease, opacity ease;
+  transition: margin 0.3s ease, opacity ease;
 }
 
 /* 하위 메뉴 링크 */
