--- a/src/css/admin/TestLIst.module.css
+++ b/src/css/admin/TestLIst.module.css
@@ -9,11 +9,11 @@
 
 /* 제목 */
 h1 {
+  text-align: left !important;
   font-size: 24px;
   color: #333; /* 어두운 색상 */
   margin-bottom: 20px;
   font-weight: bold;
- 
   border-bottom: 2px solid #4CAF50; /* 제목 아래 경계선 */
   padding-bottom: 10px;
 }
