--- a/src/css/instr/InstrSidebar.module.css
+++ b/src/css/instr/InstrSidebar.module.css
@@ -5,7 +5,7 @@
   top: 80px;
   left: 0; /* 사이드바를 왼쪽에 고정 */
   width: 230px; /* 사이드바 너비 */
-  background-color: #343a40; /* 다크 배경 */
+  background-color: #70db9df3; /* 다크 배경 */
   overflow-y: auto; /* 스크롤 가능 */
   display: flex; /* 플렉스 레이아웃 */
   flex-direction: column; /* 세로 정렬 */
@@ -22,32 +22,26 @@
   display: flex; /* 아이콘과 텍스트 정렬 */
   align-items: center; /* 수직 중앙 정렬 */
   padding: 15px 20px; /* 링크 패딩 */
-  color: #ffffff7d; /* 기본 텍스트 색상 */
+  color: #000000; /* 기본 텍스트 색상 */
   text-decoration: none; /* 밑줄 제거 */
   transition: background 0.3s, color 0.3s; /* 부드러운 색상 전환 */
 }
 
 /* 링크 호버 효과 */
 .link:hover {
-  background-color: #495057; /* 호버 시 배경색 */
-  color: white; /* 호버 시 텍스트 색상 */
+  background-color: #b6ebcabb; /* 호버 시 배경색 */
+  color: rgb(0, 0, 0); /* 호버 시 텍스트 색상 */
 }
 
 .hlink{
-  color: #ffffff7d; /* 기본 텍스트 색상 */
+  color: #000000; /* 기본 텍스트 색상 */
   text-decoration: none; /* 밑줄 제거 */
   transition: background 0.3s, color 0.3s; /* 부드러운 색상 전환 */
 }
 
 /* 링크 호버 효과 */
 .hlink:hover {
-  color: white; /* 호버 시 텍스트 색상 */
-}
-
-/* 활성화된 링크 스타일 */
-.link.active {
-  background-color:  #e76f51; /* 활성화된 링크 배경 */
-  color: white; /* 활성화된 링크 텍스트 */
+  color: rgb(0, 0, 0); /* 호버 시 텍스트 색상 */
 }
 
 .link i {
@@ -64,7 +58,7 @@
 /* 하위 메뉴 */
 .subMenu {
   display: none;
-  background-color: #495057; /* 하위 메뉴 배경색 */
+  background-color: rgba(62, 194, 154, 0.855); /* 하위 메뉴 배경색 */
   padding: 10px 0; /* 내부 여백 */
   flex-direction: column;
   position: absolute; /* 부모 요소의 흐름을 따라 위치 */
@@ -83,42 +77,29 @@
 
 /* 세 번째 드롭다운에만 적용 */
 .sidebarSection .dropdown:nth-child(3):hover + .link {
-  margin-top: 250px; /* 원하는 높이로 조정 */
+  margin-top: 160px; /* 원하는 높이로 조정 */
   transition: margin 0.3s ease, opacity 0.3s ease;
 }
 
-.sidebarSection .dropdown:nth-child(4):hover + .link {
-  margin-top: 250px; /* 원하는 높이로 조정 */
-  transition: margin 0.3s ease, opacity ease;
-}
 .sidebarSection .dropdown:nth-child(5):hover + .link {
-  margin-top: 160px; /* 원하는 높이로 조정 */
+  margin-top: 110px; /* 원하는 높이로 조정 */
   transition: margin 0.3s ease, opacity ease;
 }
 .sidebarSection .dropdown:nth-child(6):hover + .link {
-  margin-top: 120px; /* 원하는 높이로 조정 */
-  transition: margin 0.3s ease, opacity ease;
-}
-.sidebarSection .dropdown:nth-child(7):hover + .link {
-  margin-top: 160px; /* 원하는 높이로 조정 */
-  transition: margin 0.3s ease, opacity ease;
-}
-
-.sidebarSection .dropdown:nth-child(8):hover + .link {
-  margin-top: 120px; /* 원하는 높이로 조정 */
+  margin-top: 110px; /* 원하는 높이로 조정 */
   transition: margin 0.3s ease, opacity ease;
 }
 
 /* 하위 메뉴 링크 */
 .subLink {
   padding: 10px 20px; /* 하위 메뉴 여백 */
-  color: #ffffff7d;
+  color: #000000;
   text-decoration: none;
   transition: background 0.3s, color 0.3s;
 }
 
 /* 하위 메뉴 호버 효과 */
 .subLink:hover {
-  background-color: #57948b; /* 하위 메뉴 호버 배경색 */
-  color: white;
+  background-color: #b6ebcabd; /* 하위 메뉴 호버 배경색 */
+  color: rgb(0, 0, 0);
 }
