--- a/src/css/admin/AttList.module.css
+++ b/src/css/admin/AttList.module.css
@@ -35,3 +35,18 @@
     background-color: #eef3fc;
   }
   
+  .dateSelector{
+    width :200px;
+    margin-bottom: 20px;
+  }
+
+  
+.backButtonContainer {
+  padding: 10px 15px;
+}
+
+.sessionheader{
+  display: flex;
+  justify-content: space-between; /* 양쪽 정렬 */
+
+}
