--- a/src/css/student/StudentAtt.module.css
+++ b/src/css/student/StudentAtt.module.css
@@ -25,7 +25,13 @@
 .sessionInfo {
   margin-bottom: 20px;
 }
+.sessionInfo h1{
+  font-size: 40px;
+}
 
+.sessionInfo h2{
+  font-size: 30px;
+}
 .title {
   font-size: 26px;
   font-weight: 600;
@@ -102,4 +108,76 @@
   border-radius: 8px;
   padding: 10px;
   background-color: #f8f9fa;
+}
+.actionButtons {
+  display: flex; /* Flexbox 사용 */
+  align-items: center; /* 세로로 중앙 정렬 */
+  flex-wrap: wrap; /* 버튼들이 화면 너비에 맞게 줄바꿈 */
+  gap: 20px; /* 버튼 간격 조정 */
+  margin-top: 20px; /* 버튼 상단 여백 */
+}
+.updateButton {
+  background-color: #007bff; /* 기존보다 밝은 파란색 */
+  width: 200px;
+  color: white;
+  border: none;
+  border-radius: 4px; /* 둥근 모서리 추가 */
+  padding: 10px 15px; /* 버튼 크기 조정 */
+  font-size: 16px; /* 글자 크기 */
+  cursor: pointer; /* 클릭 가능 마우스 포인터 */
+  transition: all 0.3s ease; /* 부드러운 효과 추가 */
+  
+}
+
+.updateButton:hover {
+  background-color: #0056b3; /* 호버 시 어두운 파란색 */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 호버 시 그림자 효과 */
+}
+
+.updateOutButton {
+  background-color: #ff0000; /* 기존보다 밝은 파란색 */
+  width: 200px;
+  color: white;
+  border: none;
+  border-radius: 4px; /* 둥근 모서리 추가 */
+  padding: 10px 15px; /* 버튼 크기 조정 */
+  font-size: 16px; /* 글자 크기 */
+  cursor: pointer; /* 클릭 가능 마우스 포인터 */
+  transition: all 0.3s ease; /* 부드러운 효과 추가 */
+}
+
+.updateOutButton:hover {
+  background-color: #ff7513e1; /* 호버 시 어두운 파란색 */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 호버 시 그림자 효과 */
+}
+
+.attendanceStats {
+  display: flex; /* 카드들을 가로로 배치 */
+  flex-wrap: wrap; /* 카드가 화면에 맞게 줄바꿈 */
+  gap: 60px; /* 카드 사이 간격 */
+  margin-top: 20px;
+  justify-content: center; /* 가로로 중앙 정렬 */
+}
+
+.statCard {
+  background: #f9f9f9; /* 카드 배경색 */
+  border: 1px solid #ddd; /* 카드 테두리 */
+  border-radius: 8px; /* 둥근 모서리 */
+  padding: 15px;
+  width: 200px; /* 카드 너비 */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+  text-align: center; /* 내용 중앙 정렬 */
+}
+
+.statCard p {
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.statCard span {
+  font-size: 18px;
+  color: #007bff;
+  font-weight: bold;
 }
