--- a/src/css/admin/TestLIst.module.css
+++ b/src/css/admin/TestLIst.module.css
@@ -130,6 +130,23 @@ h1 {
   text-decoration: underline; /* 링크 강조 */
 }
 
+.buttonContainer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.createButton {
+  background-color: #3300ff;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
 /* 반응형 디자인 */
 @media (max-width: 768px) {
   .searchBar {
