--- a/src/css/admin/PartLIst.module.css
+++ b/src/css/admin/PartLIst.module.css
@@ -179,6 +179,20 @@
 .editButton:hover {
   background-color: #0056b3; /* 호버 시 더 어두운 파란색 */
 }
+.saveButton {
+  background-color: #24ca24; /* 파란색 */
+  color: #ffffff; /* 흰색 텍스트 */
+  border: none; /* 테두리 제거 */
+  padding: 8px 12px; /* 버튼 내부 여백 */
+  border-radius: 4px; /* 둥근 모서리 */
+  font-size: 14px; /* 폰트 크기 */
+  cursor: pointer; /* 커서 모양 변경 */
+  transition: background-color 0.3s ease; /* 부드러운 전환 효과 */
+}
+
+.saveButton:hover {
+  background-color: #108438e9; /* 호버 시 더 어두운 파란색 */
+}
 
 .deleteButton {
   background-color: #dc3545; /* 부트스트랩 기본 빨간색 */
@@ -195,3 +209,19 @@
   background-color: #a71d2a; /* 호버 시 더 어두운 빨간색 */
 }
 
+.buttonContainer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.createButton {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
