--- a/src/css/admin/CourseList.module.css
+++ b/src/css/admin/CourseList.module.css
@@ -86,6 +86,10 @@
     transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
     text-decoration: none;
   }
+  .editbtn a{
+    color: white !important; 
+    
+  }
 
   .editbtn:hover {
     background-color: #e0a800;
