--- a/src/css/manager/ManagerSessionList.module.css
+++ b/src/css/manager/ManagerSessionList.module.css
@@ -36,7 +36,7 @@
   
   /* 테이블 헤더 스타일 */
   .sessionlisttable th {
-    background-color: #da9917; 
+    background-color: #8fda17; 
     color: white; /* 텍스트 색상 */
     text-transform: uppercase; /* 대문자 */
     font-weight: bold;
